--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -24,6 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/orderstxt"
+        android:paddingLeft="24dp"
         android:text="Who Ordered:"
         android:textColor="#E8FFFFFF"
         android:textSize="20dp"
@@ -37,6 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/orderwho"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
@@ -49,6 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/orderusername"
+        android:paddingLeft="24dp"
         android:text="Where to supply:"
         android:textColor="#E8FFFFFF"
         android:textSize="20dp"
@@ -62,6 +66,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/orderwhere"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
@@ -73,6 +79,7 @@
         android:id="@+id/orderwhatqty"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="24dp"
         android:layout_below="@id/orderlocation"
         android:text="Quantity:"
         android:textColor="#E8FFFFFF"
@@ -87,6 +94,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/orderwhatqty"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
@@ -101,6 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/orderquantity"
         android:text="If any speaial recommendation:"
+        android:paddingLeft="24dp"
         android:textColor="#E8FFFFFF"
         android:textSize="20dp"
         android:textStyle="italic"
@@ -113,6 +123,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/orderrecommendation"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
