--- a/app/src/main/res/layout/activity_works.xml
+++ b/app/src/main/res/layout/activity_works.xml
@@ -4,41 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Works">
-
+    android:background="@drawable/register"
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/orderstxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
         android:text="Works"
         android:textColor="#E8FFFFFF"
         android:textSize="35dp"
-        android:textStyle="bold"
-        android:layout_marginTop="30dp"
-        android:gravity="center"
-        />
+        android:textStyle="bold" />
+
     <ImageView
         android:id="@+id/imageforworks"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:background="@drawable/craft6"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/orderstxt"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
-        />
+        android:background="@drawable/product" />
 
     <TextView
         android:id="@+id/txtforprice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/imageforworks"
+        android:layout_margin="5dp"
+        android:paddingLeft="24dp"
         android:text="Price :"
         android:textColor="#E8FFFFFF"
         android:textSize="20dp"
-        android:textStyle="italic"
-        android:layout_margin="5dp"
-        />
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/price"
@@ -46,6 +45,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/txtforprice"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
@@ -53,17 +54,18 @@
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
+
     <TextView
         android:id="@+id/dayneeded"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/price"
+        android:layout_margin="5dp"
+        android:paddingLeft="24dp"
         android:text="Days needed to complete:"
         android:textColor="#E8FFFFFF"
         android:textSize="20dp"
-        android:textStyle="italic"
-        android:layout_margin="5dp"
-        />
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/days"
@@ -71,6 +73,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/dayneeded"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
@@ -84,18 +88,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/days"
+        android:layout_margin="5dp"
+        android:paddingLeft="24dp"
         android:text="Comment :"
         android:textColor="#E8FFFFFF"
         android:textSize="20dp"
-        android:textStyle="italic"
-        android:layout_margin="5dp"
-        />
+        android:textStyle="italic" />
+
     <TextView
         android:id="@+id/peopleopinion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/publicopinion"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
