upload product completed

--- a/app/src/main/res/layout/activity_upload_works.xml
+++ b/app/src/main/res/layout/activity_upload_works.xml
@@ -57,12 +57,40 @@
         app:layout_constraintHorizontal_bias="0.701"
         app:layout_constraintStart_toStartOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
+    <TextView
+        android:id="@+id/nameinworks"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/imageforworks"
+        android:paddingLeft="24dp"
+        android:text="Title :"
+        android:textColor="#E8FFFFFF"
+        android:textSize="20dp"
+        android:textStyle="italic"
+        android:layout_margin="5dp"
+        />
+
+    <EditText
+        android:id="@+id/editname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/nameinworks"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="10dp"
+        android:background="#30ffffff"
+        android:drawablePadding="20dp"
+        android:hint="name"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
 
     <TextView
         android:id="@+id/priceinworks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/imageforworks"
+        android:layout_below="@id/editname"
         android:paddingLeft="24dp"
         android:text="Price :"
         android:textColor="#E8FFFFFF"
@@ -114,17 +142,20 @@
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
+
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/submitworks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/submitworks"
-        android:text="SUBMIT"
-        android:textSize="25dp"
         android:layout_below="@id/editdays"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="@color/teal_200"
-        android:layout_margin="20dp"
-        />
+        android:text="SUBMIT"
+        android:textSize="25dp" />
 
 
 
