--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -22,7 +22,7 @@
         android:background="#6B6E6868"
         android:drawableLeft="@drawable/ic_baseline_local_phone_24"
         android:drawablePadding="15dp"
-        android:hint="Mobile Number"
+        android:hint="মোবাইল নাম্বার"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
@@ -40,7 +40,7 @@
         android:layout_marginBottom="60dp"
         android:gravity="center"
         android:background="@color/white"
-        android:text="You'll receive a verification code in the above number"
+        android:text="আপনাকে একটি ভেরিফিকেশন কোড পাঠানো হয়েছে"
         android:textColor="@color/cardview_dark_background"
         android:textSize="12dp"/>
 
@@ -56,7 +56,7 @@
         android:layout_marginEnd="122dp"
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/purple_500"
-        android:text="CONFIRM" />
+        android:text="নিশ্চিত করুন" />
 
 
 </RelativeLayout>
