--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -12,7 +12,7 @@
         android:id="@+id/orderstxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Order Details"
+        android:text="অর্ডারের বিস্তারিত তথ্য"
         android:textColor="#E8FFFFFF"
         android:textSize="35dp"
         android:textStyle="bold"
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/orderstxt"
         android:paddingLeft="24dp"
-        android:text="Who Ordered:"
+        android:text="কে অর্ডার করেছেন:"
         android:textColor="#E8FFFFFF"
         android:textSize="20dp"
         android:textStyle="italic"
@@ -43,7 +43,7 @@
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
-        android:hint="Username"
+        android:hint="নাম"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/orderusername"
         android:paddingLeft="24dp"
-        android:text="Where to supply:"
+        android:text="কোথায় অর্ডার পৌঁছে দিতে হবে :"
         android:textColor="#E8FFFFFF"
         android:textSize="20dp"
         android:textStyle="italic"
@@ -71,7 +71,7 @@
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
-        android:hint="Address"
+        android:hint="ঠিকানা"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
@@ -81,7 +81,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="24dp"
         android:layout_below="@id/orderlocation"
-        android:text="Quantity:"
+        android:text="পরিমাণ :"
         android:textColor="#E8FFFFFF"
         android:textSize="20dp"
         android:textStyle="italic"
@@ -99,7 +99,7 @@
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
-        android:hint="Number"
+        android:hint="পরিমাণ"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
@@ -109,7 +109,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/orderquantity"
-        android:text="If any speaial recommendation:"
+        android:text="বিশেষ কোন তথ্য/ সুপারিশ:"
         android:paddingLeft="24dp"
         android:textColor="#E8FFFFFF"
         android:textSize="20dp"
@@ -128,7 +128,7 @@
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
-        android:hint="None"
+        android:hint="নেই"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
