--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -12,7 +12,7 @@
         android:id="@+id/profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your Profile"
+        android:text="আপনার প্রোফাইল"
         android:textColor="#E8FFFFFF"
         android:textSize="35dp"
         android:textStyle="bold"
@@ -26,7 +26,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        android:hint="select for orders"
+        android:hint="আপনার প্রোফাইল"
         android:background="#30ffffff"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         >
@@ -44,7 +44,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        android:hint="select for works"
+        android:hint="কাজ গুলো দেখুন"
         android:background="#30ffffff"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         >
@@ -58,7 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/upload"
-        android:text="Upload Work"
+        android:text="নতুন কাজ আপলোড করুন"
         android:textSize="16dp"
         android:backgroundTint="@color/purple_500"
         android:layout_below="@+id/uploadedworks"
