--- a/app/src/main/res/layout/activity_registration_new.xml
+++ b/app/src/main/res/layout/activity_registration_new.xml
@@ -11,7 +11,7 @@
         android:id="@+id/createdialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Account"
+        android:text="অ্যাকাউন্ট খুলুন"
         android:textStyle="bold"
         android:textSize="35dp"
         android:layout_centerHorizontal="true"
@@ -31,7 +31,7 @@
         android:background="#30ffffff"
         android:drawableLeft="@drawable/ic_baseline_local_phone_24"
         android:drawablePadding="15dp"
-        android:hint="Mobile number"
+        android:hint="মোবাইল নাম্বার"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
@@ -50,7 +50,7 @@
         android:background="#30ffffff"
         android:drawableLeft="@drawable/ic_baseline_person_24"
         android:drawablePadding="15dp"
-        android:hint="Username"
+        android:hint="ব্যবহারকারীর নাম"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
@@ -68,7 +68,7 @@
         android:background="#30ffffff"
         android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
         android:drawablePadding="15dp"
-        android:hint="Password"
+        android:hint="গোপন পিন নাম্বার দিন"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
@@ -87,7 +87,7 @@
         android:background="#30ffffff"
         android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
         android:drawablePadding="15dp"
-        android:hint="Confirm Password"
+        android:hint="গোপন পিন নাম্বারটি পুনরায় লিখুন"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
@@ -99,7 +99,7 @@
         android:layout_below="@+id/conpass"
         android:layout_centerHorizontal="true"
         android:backgroundTint="@color/purple_700"
-        android:text="Register"
+        android:text="রেজিস্টার"
         android:layout_marginTop="40dp"/>
 
     <LinearLayout
@@ -113,14 +113,14 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Already have an account?"
+            android:text="আপনার কি ইতিমধ্যে অ্যাকাউন্ট আছে?"
             android:textColor="@color/white"/>
         <TextView
             android:id="@+id/loginnow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:text="Login Now"
+            android:text="লগইন করুন"
             android:textStyle="bold"
             android:textColor="@color/white"/>
     </LinearLayout>
