--- a/app/src/main/res/layout/activity_upload_works.xml
+++ b/app/src/main/res/layout/activity_upload_works.xml
@@ -11,7 +11,7 @@
         android:id="@+id/uploadworktxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Upload Works"
+        android:text="কাজ আপলোড করুন"
         android:textColor="#E8FFFFFF"
         android:textSize="35dp"
         android:textStyle="bold"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/uploadworktxt"
         android:paddingLeft="24dp"
-        android:text="Image of your work :"
+        android:text="আপনার কাজের ছবি :"
         android:textColor="#E8FFFFFF"
         android:textSize="20dp"
         android:textStyle="italic"
@@ -32,7 +32,7 @@
         />
 
     <ImageView
-        android:id="@+id/imageforworks"
+        android:id="@+id/imageforuploadworks"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_below="@id/imgtxt"
@@ -58,12 +58,12 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
     <TextView
-        android:id="@+id/nameinworks"
+        android:id="@+id/nameinuploadworks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/imageforworks"
+        android:layout_below="@id/imageforuploadworks"
         android:paddingLeft="24dp"
-        android:text="Title :"
+        android:text="শিরোনাম :"
         android:textColor="#E8FFFFFF"
         android:textSize="20dp"
         android:textStyle="italic"
@@ -74,25 +74,25 @@
         android:id="@+id/editname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/nameinworks"
+        android:layout_below="@id/nameinuploadworks"
         android:layout_marginTop="5dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
-        android:hint="name"
+        android:hint="নাম"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
 
     <TextView
-        android:id="@+id/priceinworks"
+        android:id="@+id/priceinuploadworks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/editname"
         android:paddingLeft="24dp"
-        android:text="Price :"
+        android:text="দাম :"
         android:textColor="#E8FFFFFF"
         android:textSize="20dp"
         android:textStyle="italic"
@@ -103,24 +103,24 @@
         android:id="@+id/editprice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/priceinworks"
+        android:layout_below="@id/priceinuploadworks"
         android:layout_marginTop="5dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
-        android:hint="150 BDT"
+        android:hint="কত টাকা"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
     <TextView
-        android:id="@+id/dayinworks"
+        android:id="@+id/dayinuploadworks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/editprice"
         android:paddingLeft="24dp"
-        android:text="Days needed to complete:"
+        android:text="সময় :"
         android:textColor="#E8FFFFFF"
         android:textSize="20dp"
         android:textStyle="italic"
@@ -131,14 +131,14 @@
         android:id="@+id/editdays"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/dayinworks"
+        android:layout_below="@id/dayinuploadworks"
         android:layout_marginTop="5dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
-        android:hint="15 days"
+        android:hint="কাজটি সম্পন্ন করতে করতে কত দিন লাগবে "
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
@@ -154,7 +154,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/teal_200"
-        android:text="SUBMIT"
+        android:text="নিশ্চিত করুন"
         android:textSize="25dp" />
 
 
