--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/image"
         android:layout_marginTop="-10dp"
-        android:text="Your profile"
+        android:text="আপনার প্রোফাইল"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"/>
 
@@ -32,7 +32,7 @@
         android:layout_below="@id/yourprofile"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:text="Our Artisans"
+        android:text="আমাদের কারিগর"
         android:textSize="25dp"
         android:textColor="#454242"/>
 
@@ -71,16 +71,15 @@
     </HorizontalScrollView>
 
 
-
     <TextView
         android:id="@+id/artisanlist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/scrollaritsan"
-        android:layout_marginTop="5dp"
         android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="16dp"
-        android:text="View full list"
+        android:text="পুরো লিস্ট দেখুন"
         android:textColor="#494747" />
 
     <TextView
@@ -89,7 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/artisanlist"
         android:layout_marginLeft="10dp"
-        android:text="Category"
+        android:text="পণ্য ক্যাটাগরি"
         android:textColor="#454242"
         android:textSize="25dp" />
 
@@ -99,14 +98,17 @@
         android:layout_height="190dp"
         android:layout_below="@+id/categorydialog"
         android:layout_marginTop="-5dp">
+
         <FrameLayout
             android:layout_width="fill_parent"
             android:layout_height="match_parent">
+
             <LinearLayout
                 android:id="@+id/lineargrid"
                 android:layout_width="1050dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <GridView
                     android:id="@+id/gridcat"
                     android:layout_width="fill_parent"
@@ -114,13 +116,13 @@
                     android:layout_margin="4dp"
                     android:columnWidth="150dp"
                     android:gravity="center"
-                    android:numColumns="500"
                     android:horizontalSpacing="1dp"
+                    android:numColumns="500"
                     android:scrollbarAlwaysDrawHorizontalTrack="true"
                     android:scrollbarAlwaysDrawVerticalTrack="true"
                     android:scrollbars="horizontal"
                     android:stretchMode="none"
-                    android:verticalSpacing="1dp"/>
+                    android:verticalSpacing="1dp" />
             </LinearLayout>
         </FrameLayout>
     </HorizontalScrollView>
@@ -130,10 +132,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/scrollproducts"
-        android:layout_marginTop="5dp"
         android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="16dp"
-        android:text="View full list"
+        android:text="পুরো লিস্ট দেখুন"
         android:textColor="#494747" />
 
     <com.google.android.material.button.MaterialButton
@@ -141,19 +143,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/categorylist"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/purple_500"
-        android:layout_centerHorizontal="true"
-        android:text="LOGIN" />
+        android:text="লগইন করুন" />
 
     <TextView
         android:id="@+id/account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/loginbtn"
-        android:layout_marginTop="2dp"
         android:layout_centerHorizontal="true"
-        android:text="Don't have an account?"
+        android:layout_marginTop="2dp"
+        android:text="নতুন অ্যাকাউন্ট খুলতে চান?"
         android:textColor="#494747" />
 
     <TextView
@@ -163,7 +165,7 @@
         android:layout_below="@id/account"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="2dp"
-        android:text="Sign Up"
+        android:text="অ্যাকাউন্ট খুলুন"
         android:textColor="#333333"
         android:textStyle="bold" />
 </RelativeLayout>
