--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -23,7 +23,7 @@
         android:layout_marginEnd="35dp"
         android:layout_marginBottom="60dp"
         android:gravity="center"
-        android:text="Verification Successful"
+        android:text="ভেরিফিকেশন সম্পন্ন হয়েছে"
         android:textColor="@color/white"
         android:textSize="24dp"
         android:textStyle="bold" />
@@ -38,7 +38,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="60dp"
         android:gravity="center"
-        android:text="You can set up a new password"
+        android:text="এখন আপনি নতুন পাসওয়ার্ড দিতে পারবেন"
         android:textColor="@color/white"
         android:textSize="16dp"/>
 
@@ -53,7 +53,7 @@
         android:background="#81B6A9A9"
         android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
         android:drawablePadding="10dp"
-        android:hint="Enter new password"
+        android:hint="নতুন পাসওয়ার্ড দিন"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
@@ -71,7 +71,7 @@
         android:layout_marginEnd="122dp"
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/white"
-        android:text="Submit"
+        android:text="নিশ্চিত করুন"
         android:textStyle="bold"
         android:textColor="#673AB7"/>
 
