--- a/app/src/main/res/layout/activity_verification_page.xml
+++ b/app/src/main/res/layout/activity_verification_page.xml
@@ -23,7 +23,7 @@
         android:layout_marginEnd="35dp"
         android:layout_marginBottom="60dp"
         android:gravity="center"
-        android:text="Enter the verification code"
+        android:text="ভেরিফিকেশন কোডটি লিখুন"
         android:textColor="@color/purple_500"
         android:textSize="24dp"
         android:textStyle="bold" />
@@ -38,7 +38,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="60dp"
         android:gravity="center"
-        android:text="We've just sent you a verification code via +880**********"
+        android:text="+৮৮০**********এই মোবাইল নাম্বারে আপনাকে একটি ভেরিফিকেশন কোড পাঠানো হয়েছে"
         android:textColor="@color/cardview_dark_background"
         android:textSize="16dp"/>
 
@@ -53,7 +53,7 @@
         android:background="#81B6A9A9"
         android:drawableLeft="@drawable/ic_baseline_qr_code_24"
         android:drawablePadding="10dp"
-        android:hint="Verification Code"
+        android:hint="ভেরিফিকেশন কোড "
         android:padding="20dp"
         android:textColor="@color/cardview_dark_background"
         android:textColorHint="@color/cardview_dark_background" />
@@ -63,7 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/resend"
-        android:text="Resend Code"
+        android:text="পুনরায় ভেরিফিকেশন কোড পাঠান"
         android:textColor="@color/cardview_dark_background"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="560dp"/>
@@ -80,5 +80,5 @@
         android:layout_marginEnd="122dp"
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/purple_500"
-        android:text="Submit" />
+        android:text="নিশ্চিত করুন" />
 </RelativeLayout>
