--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -146,26 +146,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/purple_500"
-        android:text="লগইন করুন" />
-
-    <TextView
-        android:id="@+id/account"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/loginbtn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="2dp"
-        android:text="নতুন অ্যাকাউন্ট খুলতে চান?"
-        android:textColor="#494747" />
-
-    <TextView
-        android:id="@+id/signup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/account"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="2dp"
-        android:text="অ্যাকাউন্ট খুলুন"
-        android:textColor="#333333"
-        android:textStyle="bold" />
+        android:text="লগআউট করুন" />
 </RelativeLayout>
