--- a/app/src/main/res/layout/activity_works.xml
+++ b/app/src/main/res/layout/activity_works.xml
@@ -24,8 +24,7 @@
         android:layout_height="150dp"
         android:layout_below="@id/workstxt"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/product" />
+        android:layout_marginTop="5dp" />
     <TextView
         android:id="@+id/nameinworks"
         android:layout_width="match_parent"
